language/move-lang/tests/move_check/borrows/borrow_field_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/borrow_field_full_invalid.move:13:17 ───
    │
 13 │         let c = copy inner;
    │                 ---------- It is still being mutably borrowed by this reference
 14 │         let f1 = &inner.f1;
    │                  ^^^^^^^^^ Invalid immutable borrow at field 'f1'.
    │

error: 

    ┌── tests/move_check/borrows/borrow_field_full_invalid.move:22:17 ───
    │
 22 │         let c = id_mut(copy inner);
    │                 ------------------ It is still being mutably borrowed by this reference
 23 │         let f1 = &inner.f1;
    │                  ^^^^^^^^^ Invalid immutable borrow at field 'f1'.
    │

error: 

    ┌── tests/move_check/borrows/borrow_field_full_invalid.move:31:17 ───
    │
 31 │         let c = copy inner;
    │                 ---------- It is still being mutably borrowed by this reference
 32 │         let f1 = &mut inner.f1;
    │                  ^^^^^^^^^^^^^ Invalid mutable borrow at field 'f1'.
    │

error: 

    ┌── tests/move_check/borrows/borrow_field_full_invalid.move:40:17 ───
    │
 40 │         let c = id_mut(copy inner);
    │                 ------------------ It is still being mutably borrowed by this reference
 41 │         let f1 = &mut inner.f1;
    │                  ^^^^^^^^^^^^^ Invalid mutable borrow at field 'f1'.
    │

